Исправил все ошибки